--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>DB Manager | Home page</title>
+        <meta name="description" content="DB Manager is a software that gives you ability to browse, edit and control your database files for free.">
+        <meta name="keywords" content="db manager, software, db, sqlite, program, database manager, database, sqlite manager, files, db files, manager">
         <link rel="stylesheet" href="./style/main.css">
         <script src="https://kit.fontawesome.com/8a90adf94b.js" crossorigin="anonymous"></script>
         <script src="./scripts/control.js"></script>
