--- a/index.html
+++ b/index.html
@@ -15,19 +15,29 @@
             <a href="https://github.com/yasserprogamer/DBManager/releases">
                 <button>
                     <i class="fa-brands fa-windows"></i> Download
-                    <p>Latest release: 1.1</p>
+                    <p>Latest release</p>
                 </button>
             </a>
         </div>
-        <!--div class="Box">
+        <div class="Box">
             <div class="image">
-                <img src="https://avatars.githubusercontent.com/u/71287199" alt="" srcset="">
+                <img src="./assets/screenshot-menu.PNG" alt="" srcset="">
             </div>
             <div class="info">
-                <h4>Easy to use!</h4>
-                <p>That all you have to do is inserting your file location and start browsing your SQLite.</p>
+                <h4><i class="fa-solid fa-bolt"></i> Easy to use!</h4>
+                <p>It is very simple to use. That all you have to do is inserting your file location and start browsing and editing your database.</p>
             </div>
-        </div-->
+        </div>
+        <div class="InfoBox">
+            <h2>Free forever!</h2>
+            <p>No ads or anything. Free for you to use. You do not have to pay at all and the best part, it is open-source!</p>
+        </div>
+        <div class="Box">
+            <div class="info">
+                <h4><i class="fa-solid fa-couch"></i> Stay relaxed!</h4>
+                <p>We fully respect your privacy. There are no trackers or logs to worry about! Stay relaxed :D</p>
+            </div>
+        </div>
         <div class="InfoBox">
             <h2>Requirements</h2>
             <p>Using software when it does NOT meet minimum requirements is not recommended.</p>
