--- a/index.html
+++ b/index.html
@@ -19,27 +19,41 @@
                 </button>
             </a>
         </div>
-        <div class="Box">
+        <svg style="background-color:#fff;" width="100%" height="80" viewBox="0 0 100 100" preserveAspectRatio="none">
+            <path id="wavepath" d="M0,0  L110,0C35,180 45,0 0,100z" fill="#282A35" style="fill: rgb(6, 6, 7);"></path>
+        </svg>
+        <div class="InfoBox">
+            <h2><i class="fa-solid fa-gift"></i> Free forever!</h2>
+            <p>No ads or anything. Free for you to use. You do not have to pay at all and the best part, it is open-source!</p>
+            <div class="GitHubBox">
+                <h3><i class="fa-brands fa-github"></i> Check source code in GitHub!</h3>
+                <p>We allow you to browse codes and have a look on it.</p>
+            </div>
+        </div>
+        <div class="InfoBox">
+            <h2><i class="fa-solid fa-bolt"></i> Easy to use!</h2>
+            <p>It is very simple to use. That all you have to do is inserting your file location and start browsing and editing your database.</p>
             <div class="image">
+                <img src="./assets/screenshot-menu.PNG" alt="A picture of DB Manager main menu." srcset="">
+            </div>
+        </div>
+        <!--div class="Box">
+            <!--div class="image">
                 <img src="./assets/screenshot-menu.PNG" alt="" srcset="">
             </div>
             <div class="info">
                 <h4><i class="fa-solid fa-bolt"></i> Easy to use!</h4>
                 <p>It is very simple to use. That all you have to do is inserting your file location and start browsing and editing your database.</p>
             </div>
-        </div>
-        <div class="InfoBox">
-            <h2>Free forever!</h2>
-            <p>No ads or anything. Free for you to use. You do not have to pay at all and the best part, it is open-source!</p>
-        </div>
-        <div class="Box">
+        </div-->
+        <!--div class="Box">
             <div class="info">
                 <h4><i class="fa-solid fa-couch"></i> Stay relaxed!</h4>
                 <p>We fully respect your privacy. There are no trackers or logs to worry about! Stay relaxed :D</p>
             </div>
-        </div>
+        </div-->
         <div class="InfoBox">
-            <h2>Requirements</h2>
+            <h2><i class="fa-solid fa-list-check"></i> Requirements</h2>
             <p>Using software when it does NOT meet minimum requirements is not recommended.</p>
             <div class="Requirements">
                 <div class="RequirementBox">
@@ -49,7 +63,6 @@
                         <li>Windows 10, 11</li>
                     </ul>
                 </div>
-                <div class="line"></div>
                 <div class="RequirementBox">
                     <h3>Recommended requirements</h3>
                     <ul>
@@ -60,8 +73,13 @@
             </div>
             <p>If you are getting DLL errors, Please download <a href="https://www.microsoft.com/en-us/download/details.aspx?id=53840">Microsoft Visual C++ 2015 Redistributable</a>.</p>
         </div>
+        <div class="InfoBox">
+            <h2><i class="fa-solid fa-star"></i> Looking for more features?</h2>
+            <p>You are lucky! You can suggest me to add your idea!</p>
+            <a href="https://forms.gle/nhqxPC2yN7qMgAM28"><button class="Suggest"><i class="fa-solid fa-lightbulb"></i> Suggest</button></a>
+        </div>
         <footer>
-            <p>DB Manager made with ❤️ by yasserprogamer.</p>
+            <p>DB Manager is made with ❤️ by yasserprogamer.</p>
         </footer>
     </body>
 </html>
