--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
             <p>Using software when it does NOT meet minimum requirements is not recommended.</p>
             <div class="Requirements">
                 <div class="RequirementBox">
-                    <h3>Minimum requirements</h3>
+                    <h3><i class="fa-solid fa-circle-check"></i> Minimum</h3>
                     <ul>
                         <li>RAM: 20 MB</li>
                         <li>Windows 10, 11</li>
                     </ul>
                 </div>
                 <div class="RequirementBox">
-                    <h3>Recommended requirements</h3>
+                    <h3><i class="fa-solid fa-truck-fast"></i> Recommended</h3>
                     <ul>
                         <li>RAM: +256 MB</li>
                         <li>Windows 10</li>
