--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="./style/main.css">
         <script src="https://kit.fontawesome.com/8a90adf94b.js" crossorigin="anonymous"></script>
         <script src="./scripts/control.js"></script>
+        <meta property="og:site_name" content="DB Manager" />
+        <meta property="og:title" content="DB Manager | Home page" />
+        <meta property="og:description" content="DB Manager is a software that gives you ability to browse, edit and control your database files for free." />
     </head>
     <body>
         <div class="Header">
