--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta property="og:site_name" content="DB Manager" />
         <meta property="og:title" content="DB Manager | Home page" />
         <meta property="og:description" content="DB Manager is a software that gives you ability to browse, edit and control your database files for free." />
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5541291047723091" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="Header">
