--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
         <meta property="og:title" content="DB Manager | Home page" />
         <meta property="og:description" content="DB Manager is a software that gives you ability to browse, edit and control your database files for free." />
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5541291047723091" crossorigin="anonymous"></script>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-S6DSRP8R0T"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'G-S6DSRP8R0T');
+        </script>
     </head>
     <body>
         <div class="Header">
