--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </svg>
         <div class="InfoBox">
             <h2><i class="fa-solid fa-gift"></i> Free forever!</h2>
-            <p>No ads or anything. Free for you to use. You do not have to pay at all and the best part, it is open-source!</p>
+            <p>Free for you to use. You do not have to pay at all and the best part, it is open-source!</p>
             <div class="GitHubBox">
                 <h3><i class="fa-brands fa-github"></i> Check source code in GitHub!</h3>
                 <p>We allow you to browse codes and have a look on it.</p>
@@ -50,21 +50,6 @@
                 <img src="./assets/screenshot-menu.PNG" alt="A picture of DB Manager main menu." srcset="">
             </div>
         </div>
-        <!--div class="Box">
-            <!--div class="image">
-                <img src="./assets/screenshot-menu.PNG" alt="" srcset="">
-            </div>
-            <div class="info">
-                <h4><i class="fa-solid fa-bolt"></i> Easy to use!</h4>
-                <p>It is very simple to use. That all you have to do is inserting your file location and start browsing and editing your database.</p>
-            </div>
-        </div-->
-        <!--div class="Box">
-            <div class="info">
-                <h4><i class="fa-solid fa-couch"></i> Stay relaxed!</h4>
-                <p>We fully respect your privacy. There are no trackers or logs to worry about! Stay relaxed :D</p>
-            </div>
-        </div-->
         <div class="InfoBox">
             <h2><i class="fa-solid fa-list-check"></i> Requirements</h2>
             <p>Using software when it does NOT meet minimum requirements is not recommended.</p>
