--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         
           gtag('config', 'G-S6DSRP8R0T');
         </script>
+        <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="yasserprogamer" data-description="Support me on Buy me a coffee!" data-message="Thank you for visiting this website. Please support me!" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
     </head>
     <body>
         <div class="Header">
