--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
         <div class="InfoBox">
             <h2><i class="fa-solid fa-star"></i> Looking for more features?</h2>
             <p>You are lucky! You can suggest me to add your idea!</p>
-            <a href="https://forms.gle/nhqxPC2yN7qMgAM28"><button class="Suggest"><i class="fa-solid fa-lightbulb"></i> Suggest</button></a>
+            <a href="https://forms.gle/nhqxPC2yN7qMgAM28" target="_blank"><button class="Suggest"><i class="fa-solid fa-lightbulb"></i> Suggest</button></a>
         </div>
         <footer>
             <p>DB Manager is made with ❤️ by yasserprogamer.</p>
+            <p><a href="./privacy.html">Privacy Policy</a> | <a href="https://www.buymeacoffee.com/yasserprogamer">Buy me a coffee</a> | <a href="https://www.github.com/yasserprogamer/DBManager" target="_blank" rel="noopener noreferrer">GitHub</a></p>
         </footer>
     </body>
 </html>
